--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 #all-products {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3,1fr);
   /* border: 1px solid black; */
   text-align: center;
   width: 100%;
@@ -37,12 +37,14 @@ body {
 }
 .single-product {
   padding: 10px;
+  margin: 5px;
   transition: 0.6s;
+  background-color: #f0f2f5;
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
+  box-shadow: 4px 4px 7px rgb(77, 75, 75);
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid rgb(156, 153, 153);
 }
 .product-image {
   width: 150px;
