fixed cart issues and edited styles

--- a/css/style.css
+++ b/css/style.css
@@ -58,12 +58,22 @@ body {
   align-items: center;
   justify-content: center;
   margin: 2% 0;
+  
+}
+.detail-card{
+  padding: 2%;
+  background-color: #f0f2f5;
+  border: 1px solid gray;
+  text-align: justify;
+  border-radius: 8px;
 }
 .card-image{
   width: 150px;
   height: 180px;
 }
-
+.card-rating{
+  font-weight: bolder;
+}
 .cart {
   width: 350px;
   /* border: 1px solid green; */
