--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,11 @@ body {
 }
 .single-product {
   padding: 10px;
-  margin: 5px;
+  margin: 8px;
   transition: 0.6s;
   background-color: #f0f2f5;
+  height: 530px;
+  
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px rgb(77, 75, 75);
@@ -85,6 +87,9 @@ body {
 }
 .cart-main {
   padding-right: 30px;
+}
+.footer{
+  margin: 2% 0;
 }
 @media only screen and (max-width: 768px) {
   #all-products {
